:bug:FIX: Control panel overflow

--- a/app/main.scss
+++ b/app/main.scss
@@ -151,7 +151,7 @@ table.table.centered {
 
     &.open {
       .menu-content {
-        width: 1000%;
+        width: 100%;
         padding-top: 0.2rem;
         margin-bottom: 1rem;
         padding-left: 0.5rem;
